@@ -6,6 +6,14 @@ Changes since 2.0.0pre21:
 ldif:
 * Empty records are simply ignored in ldif.LDIFWriter.unparse()
 
+Modules/:
+* New method result2() returns 3-tuple containing the msgid
+  of the outstanding operation
+
+ldap.ldapobject:
+* LDAPObject.result2() (see above).
+  LDAPObject.result() uses LDAPObject.result2().
+
 ----------------------------------------------------------------
 Released 2.0.0pre21 2004-03-29
 
